--- a/meu site/estilo.css
+++ b/meu site/estilo.css
@@ -5,6 +5,24 @@
 
 nav{
     background-color: #000;
+
+}
+nav li{
+    display: inline-block;
+    padding: 0.7em 0;
+}
+nav li a{
+    color: #FFF;
+    text-decoration: none;
+    font-size: 1em;
+    padding: 0 0.8em;
+    opacity: 1;
+    -webkit-transition: opacity 0.5s;
+    transition: opacity 0.5s;
+}
+
+nav li a:hover{
+    opacity: 0.65;
 }
 
 .content{
@@ -22,7 +40,9 @@ nav{
     margin-bottom: 0.5em;
 }
 
-.content > h1, .content > h2, .content > h3{
+.content > h1, 
+.content > h2, 
+.content > h3{
     font-weight: 500;
     margin-bottom: 0.5em;
 }
